[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "yfinance"
dynamic = ["version"]
description = "Download market data from Yahoo! Finance API"
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
requires-python = ">=3.6"
authors = [
    {name = "Ran Aroussi", email = "ran@aroussi.com"},
]
keywords = ["pandas", "yahoo finance", "pandas datareader", "stock prices", "historical data", "dividends", "splits", "financial data", "investment", "finance", "stocks", "options", "crypto"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.16.5",
    "requests>=2.31",
    "multitasking>=0.0.7",
    "platformdirs>=2.0.0",
    "pytz>=2022.5",
    "frozendict>=2.3.4",
    "peewee>=3.16.2",
    "beautifulsoup4>=4.11.1",
    "curl_cffi>=0.7,<0.14",
    "protobuf>=3.19.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
nospam = ["requests_cache>=1.0", "requests_ratelimiter>=0.3.1"]
repair = ["scipy>=1.6.3"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/ranaroussi/yfinance"

[project.scripts]
sample = "sample:main"

[tool.setuptools.dynamic]
version = {attr = "yfinance.version.version"}

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests", "examples"]

[tool.setuptools.package-data]
yfinance = ["pricing.proto", "pricing_pb2.py"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
extraPaths = [".", "tests"]
reportGeneralTypeIssues = "warning"
reportArgumentType = "warning"
reportOptionalMemberAccess = "warning"
reportOperatorIssue = "warning"
reportAttributeAccessIssue = "warning"
reportMissingImports = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
reportOptionalSubscript = "warning"
reportOptionalIterable = "warning"
reportCallIssue = "warning"
reportUnhashable = "warning"

[tool.ruff]
target-version = "py39"
