[project]
name = "yfinance"
dynamic = ["version"]
description = "Download market data from Yahoo! Finance API"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Ran Aroussi", email = "ran@aroussi.com" }]
requires-python = ">=3.10"
keywords = ["polars", "yahoo finance", "finance", "market data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "polars>=1.0.0",
  "numpy>=1.16.5",
  "requests>=2.31",
  "multitasking>=0.0.7",
  "platformdirs>=2.0.0",
  "pytz>=2022.5",
  "frozendict>=2.3.4",
  "peewee>=3.16.2",
  "beautifulsoup4>=4.11.1",
  "lxml>=4.9.0",
  "curl_cffi>=0.15",
  "protobuf>=3.19.0",
  "websockets>=13.0",
  "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
nospam = ["requests_cache>=1.0", "requests_ratelimiter>=0.3.1"]
repair = ["scipy>=1.6.3"]
pandas = ["pandas>=1.3.0", "pyarrow>=14.0.0"]

[project.urls]
Homepage = "https://github.com/ranaroussi/yfinance"
Repository = "https://github.com/ranaroussi/yfinance"

[project.scripts]
yfinance = "yfinance.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "yfinance/version.py"
pattern = 'version = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["yfinance"]
artifacts = ["yfinance/pricing_pb2.py", "yfinance/pricing.proto"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff>=0.4",
  "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
exclude = ["yfinance/pricing_pb2.py"]

[tool.ruff.lint]
ignore = ["E702"]

[tool.pyright]
typeCheckingMode = "basic"
reportGeneralTypeIssues = "warning"
reportArgumentType = "warning"
reportOptionalMemberAccess = "warning"
reportOperatorIssue = "warning"
reportAttributeAccessIssue = "warning"
reportMissingImports = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
reportOptionalSubscript = "warning"
reportOptionalIterable = "warning"
reportCallIssue = "warning"
reportUnhashable = "warning"
